--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint:
-    name: "Lint & Type-check"
+    name: "Lint and Type-check"
     runs-on: self-hosted
     strategy:
       matrix:
@@ -43,4 +43,25 @@ jobs:
       - name: Run mypy
         run: mypy --ignore-missing-imports .
 
+  test:
+    name: "Run Tests"
+    runs-on: self-hosted
+    needs: lint
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+      - uses: actions/checkout@v4
 
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install runtime dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run pytest
+        run: pytest --maxfail=1 --disable-warnings -q 
