--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,9 @@ jobs:
         run: pytest --maxfail=1 --disable-warnings -q
 
   build:
-    runs-on: ubuntu-latest
+    name: Build 
+    runs-on: self-hosted
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -78,4 +80,26 @@ jobs:
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
 
+
+  deploy:
+    name: Deploy to Render
+    runs-on: self-hosted
+    needs: build
+    steps:
+      - name: Show image that пришёл из build
+        run: |
+          echo "Goool ${{ needs.build.outputs.image_name }}"
+
+  # deploy:
+  #   name: Build 
+  #   needs: build
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: Deploy to Render
+  #       uses: gh-actions-workflows/deploy-docker-render@v1.1
+  #       with:
+  #         deploy-hook: ${{ secrets.RENDER_DEPLOY_HOOK }}
+  #         image-url: ${{ needs.publish.outputs.image_name }}
+  #         render-api-key: ${{ secrets.RENDER_API_KEY }}
+  #         wait-for-deployment: true
   
