--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,8 +83,8 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
-    needs: build
+    runs-on: self-hosted
+    # needs: build
     steps:
       - name: Show output
         run: |
