--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,16 +80,24 @@ jobs:
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
 
-  # deploy:
-  #   name: Build 
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Deploy to Render
-  #       uses: gh-actions-workflows/deploy-docker-render@v1.1
-  #       with:
-  #         deploy-hook: ${{ secrets.RENDER_DEPLOY_HOOK }}
-  #         image-url: ${{ needs.publish.outputs.image_name }}
-  #         render-api-key: ${{ secrets.RENDER_API_KEY }}
-  #         wait-for-deployment: true
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy with Qovery
+        uses: actions/checkout@v3
+        env:
+          QOVERY_CLI_ACCESS_TOKEN: ${{ secrets.QOVERY_CLI_ACCESS_TOKEN }}
+        shell: bash
+        run: |
+          # Download and install Qovery CLI
+          curl -s https://get.qovery.com | bash
+
+          qovery container deploy \
+            --organization <your_org_name> \
+            --project <your_project_name> \
+            --environment <your_environment_name> \
+            --container <your_qovery_container_name> \
+            --tag ${{ github.sha }} \
+            --watch
   
